@@ -47,7 +47,7 @@ function initialize(){
 
 	Cim = new CPM.Canvas( C, {zoom:zoom} )
 	// Start simulation
-	meter = new FPSMeter()
+	meter = new FPSMeter({left:"auto", right:"5px"})
 	timestep()
 }
 </script>
