@@ -32,7 +32,7 @@
 					T : 4,
 					seed: 7
 				})
-				C.addTerm( new CPM.HardVolumeRangeConstraint( C.conf ) )
+				C.add( new CPM.HardVolumeRangeConstraint( C.conf ) )
 				let Ci = new CPM.GridInitializer( C )
 				Ci.seedCellAt( 1, [C.field_size.x/2,C.field_size.y/2,C.field_size.z/2] )	
 
